// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-global-vars > 'globalVars function' 1`] = `
[
  DefinePlugin {
    "definitions": {
      "import.meta.env.ASSET_PREFIX": "\\"\\"",
      "import.meta.env.BASE_URL": "\\"/\\"",
      "import.meta.env.DEV": false,
      "import.meta.env.MODE": "\\"none\\"",
      "import.meta.env.PROD": false,
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  DefinePlugin {
    "definitions": {
      "ENV": "\\"test\\"",
      "TARGET": "\\"web\\"",
    },
  },
]
`;

exports[`plugin-global-vars > 'globalVars' 1`] = `
[
  DefinePlugin {
    "definitions": {
      "import.meta.env.ASSET_PREFIX": "\\"\\"",
      "import.meta.env.BASE_URL": "\\"/\\"",
      "import.meta.env.DEV": false,
      "import.meta.env.MODE": "\\"none\\"",
      "import.meta.env.PROD": false,
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  DefinePlugin {
    "definitions": {
      "import.meta.bar": "{\\"a\\":\\"bar\\",\\"b\\":false,\\"c\\":{\\"d\\":42}}",
      "process.env.foo": "\\"foo\\"",
      "window.baz": "[null,\\"baz\\"]",
    },
  },
]
`;
